[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-server"
version = "0.1.0"
description = "A minimal FastAPI server with rate limiting and logging"
readme = "README.md"
authors = [{ name = "tcapelle", email = "tcapelle@pm.me" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["fastapi", "server", "rate-limiting", "logging"]
dependencies = [
    "simple_parsing>=0.1.5",
    "fastapi>=0.111.0",
    "limits>=3.13.0",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/tcapelle/mini_server"

[tool.setuptools.packages.find]
where = ["."]
include = ["mini_server*"]
exclude = ["tests*"]